# Lernmaterial

./: README.md
2. Lehrjahr/AWP/: SQL Übungen Variablen.md  SQL Übungen ohne Lösung.md  buch_schule_neu.sql  ubung.sql
2. Lehrjahr/AWP/Prüfung am 27.05.2022/: Lernen.md  README.md
2. Lehrjahr/BGP/: 22-06-2022.md
2. Lehrjahr/FU_IT/: 20-07-2022.md  29-06-2022.md
2. Lehrjahr/IT-Tec/: 23-06-2022.md  Cheat sheet.xd  Interrupts.pptx  Werkstatt.py
2. Lehrjahr/IT-Tec/Cheat Sheet/: Cheat sheet.xd
2. Lehrjahr/IT-Tec/Interrupts (very badly explained)/: Interrupts.md
2. Lehrjahr/PuG/: 20-06-2022.md  22-06-2022.md
2. Lehrjahr/PuG/Religiöser Extremismus/: Präsentation.pptx  Religiöser Extremismus.xd
2. Lehrjahr/PuG/Religiöser Extremismus/Handout/: Religiöser Extremismus.xd
3. Lehrjahr/: Klassendiagramme 4489a2dab21044b898f3e5a192cbb755.md
3. Lehrjahr/AEuP/OOP/Gassigehen/: .gitignore  CMakeLists.txt  main.cpp
3. Lehrjahr/AEuP/OOP/Gassigehen/src/: CMakeLists.txt  Herrchen.cpp  Herrchen.h  Hund.cpp  Hund.h  Stock.cpp  Stock.h  Utils.cpp  Utils.h
3. Lehrjahr/AEuP/Prüfung am 21.09.2022/: Was ist Objektoriertung ab961f1bedec423885af24f8483c0b57.md
3. Lehrjahr/ITP/Marketing/: 1 Kurzarbeit (28 10 2022) e1171d9fdd1a419e9f2685078fc25055.md  Einführung Marketing (16-09-2022) dd5a5d12588443a2a083495d6775d5e7.md
